fix:overflow

--- a/main page/style.css
+++ b/main page/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: #e84525;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .main {
